<resources>
    <string name="workout">Trening</string>
    <string name="connection">Połączenie</string>
    <string name="connect_to">Połącz</string>
    <string name="fill_field">Wypełnij pole</string>
    <string name="signed_in">Zalogowano</string>
    <string name="not_signin">Nie jesteś zalogowany!</string>
    <string name="only_numbers_and_letter">Wpisz tylko litery i cyfry</string>
    <string name="send">Wyślij</string>
    <string name="registration">Rejestracja</string>
    <string name="verify_error">Błędna weryfikacja</string>
    <string name="sign_in_error">Błąd logowania - złe hasło lub login</string>
    <string name="end_workout_question">Czy chcesz zakończyć trening?</string>
    <string name="invalid_replaceExercise">Nie udało się zamienić ćwiczenia</string>
    <string name="connection_error">Błąd połączenia</string>
    <string name="connection_or_load_error">Błąd połączenia lub wczytania danych!</string>
    <string name="create_plan">Stwórz plan</string>
    <string name="show_plan">Pokaż plan</string>
    <string name="future_option">Nie wiem</string>
    <string name="options">Opcje</string>
    <string name="app_name">WBT</string>
    <string name="password">Hasło</string>
    <string name="replacement_exer">Zmień ćwiczenie</string>
    <string name="hello">Witamy!</string>
    <string name="login_text">Logowanie</string>
    <string name="log_up">Zaloguj</string>
    <string name="login">Nazwa użytkownika</string>
    <string name="title_lable">Menu</string>
    <string name="createPlan_lable">Stwórz plan</string>
    <string name="showPlan_lable">Pokaż plan</string>
    <string name="option_lable">Opcje</string>
    <string name="exit_lable">Wyjście</string>
    <string name="connect_server_lable">Połączenie z serverem</string>
    <string name="connect_button_lable">Połącz</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="signin">Zaloguj</string>
    <string name="cancel">Anuluj</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="pass_different">Hasła się różnią</string>
    <string name="email">Adres e-mail</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="sms_verify">Weryfikacja SMS</string>
    <string name="registry">Rejestruj</string>
    <string name="email_verify">Weryfickaja e-mail</string>
    <string name="verify_code">Wprowadź kod weryfikacjyjny</string>
    <string name="log_in">Zaloguj</string>
    <string name="go_next_hint">Aby przejść dalej, przesuń ekran w prawo</string>
    <string name="go_back_next_hint">Przesuń ekran w lewo, aby wrócić lub w prawo, aby iść dalej</string>
    <string name="go_back_hint">Aby wrócić, przesuń ekran w lewo</string>
    <string name="remember_signin">Zaloguj automatycznie</string>
    <string name="invate_to_register">Zapraszamy do rejestracji</string>
    <string name="survey_fill">Zapraszamy do wypłenienia ankiety</string>
    <string name="advancement_level">Poziom</string>
    <string name="training_level">Częstotliwość treningów</string>
    <string name="retry_password">Powtórz hasło</string>
    <string name="once_twice">1-2</string>
    <string name="three_four">3-4</string>
    <string name="five_six">5-6</string>
    <string name="seven_or_more">7 i więcej</string>
    <string name="frequency">Liczba treningów tygodniowo</string>
    <string name="shortened_frequency">Liczba treningów</string>
    <string name="title_activity_user_parameters_survey">UserParametersSurvey</string>
    <string name="summary">Podsumowanie</string>
    <string name="verification_way">Sposób weryfikacji</string>
    <string name="login_eng">Login</string>
    <string name="goal">Cel treningu</string>
    <string name="thank_you">Dziękujemy</string>
    <string name="user_parameters">Podaj swoje parametry</string>
    <string name="age">Wiek</string>
    <string name="weight">Waga</string>
    <string name="height">Wzrost</string>
    <string name="thank_for_fill">za wypełnienie ankiety i rejestrację</string>
    <string name="dane_kontaktowe">Dane kontaktowe</string>
    <string name="email_address">Adres e-mail</string>
    <string name="verify_method">Sposób weryfikacji:</string>
    <string name="email_verification">e-mail</string>
    <string name="phone_verification">SMS</string>
    <string name="empty_text"> </string>
    <string name="your_level">Jaki jest Twój poziom?</string>
    <string name="basic">Podstawowy</string>
    <string name="intermediate">Średnio zaawansowany</string>
    <string name="advanced">Zaawansowany</string>
    <string name="your_goal">Jaki jest Twój cel?</string>
    <string name="strength">Siła</string>
    <string name="stamina">Wytrzymałość</string>
    <string name="reduction">Redukcja</string>
    <string name="info_menu">Szczegóły</string>
    <string name="change_exercises">Zamień ćwiczenie</string>
    <string name="email_error">Wpisz prawidłowy e-mail</string>
    <string name="phone_error">Wpisz numer telefonu</string>
    <string name="registration_positive">Udało się zarejestrować</string>
    <string name="registration_negative">Nie udało się zarejestrować</string>
    <string name="exc1_title">Leg Press</string>
    <string name="exc2_title">Lats Extention</string>
    <string name="exc3_title">Squats</string>
    <string name="exc4_title">Bench Press</string>
    <string name="exc5_title">Seated Cable Row</string>
    <string name="exc6_title">Ab Crunch</string>
    <string name="exc1_info">INFO ABOUT Leg Press</string>
    <string name="exc2_info">INFO ABOUT Lats Extention</string>
    <string name="exc3_info">INFO ABOUT Squats</string>
    <string name="exc4_info">INFO ABOUT Bench Press</string>
    <string name="exc5_info">INFO ABOUT Seated Cable Row</string>
    <string name="exc6_info">Lie on your back with your knees bent and feet flat on the floor, hip-width apart.

Place your hands behind your head so your thumbs are behind your ears.

Don’t lace your fingers together.

Hold your elbows out to the sides but rounded slightly in.

Tilt your chin slightly, leaving a few inches of space between your chin and your chest.

Gently pull your abdominals inward.

Curl up and forward so that your head, neck, and shoulder blades lift off the floor.

Hold for a moment at the top of the movement and then lower slowly back down.</string>
    <string name="change_password">Zmień hasło</string>
    <string name="change_data">Edytuj dane</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="change">Zmień</string>
    <string name="close">Zamknij</string>
    <string name="edit_personal_data">Edytuj dane personalne</string>
    <string name="edit_training_data">Edytuj dane treningowe</string>
    <string name="error_player">Błąd wyświetlania</string>
    <string name="end_training">Zakończ trening</string>
    <string name="logout">Wyolguj</string>
</resources>
