<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center">

    <TextView
        android:id="@+id/change_data_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/options"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
                android:text="@string/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/change_password_button"
                android:onClick="onButtonClick" />

        <Button
                android:text="@string/edit_personal_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/change_user_data_button"
                android:onClick="onButtonClick" />

        <Button
            android:text="@string/edit_training_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/change_training_data_button"
            android:onClick="onButtonClick" />
    </LinearLayout>
</LinearLayout>
