<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="229dp"
            android:layout_height="216dp"
            app:srcCompat="@drawable/boarandtitle"
            android:layout_weight="0.31" />

        <Button
            android:id="@+id/show_plan_button"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/show_plan" />

        <Button
            android:id="@+id/create_plan_button"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/create_plan" />

        <Button
            android:id="@+id/unknown_button"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/future_option" />

        <Button
            android:id="@+id/option_button"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/options" />
    </LinearLayout>
</LinearLayout>