<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_goal_survey"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.karol.wbt.SurveyActivities.GoalSurvey"
    android:orientation="vertical"
    android:background="@drawable/greybackground">

    <TextView
        android:id="@+id/goal_title"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/your_goal"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/advancement_choice"
        android:layout_width="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/opt_stamina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stamina"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            tools:ignore="SmallSp" />

        <RadioButton
            android:id="@+id/opt_redutcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reduction"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            tools:ignore="SmallSp" />

        <RadioButton
            android:id="@+id/opt_strength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strength"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            tools:ignore="SmallSp" />

    </RadioGroup>

    <TextView
        android:id="@+id/moves_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="10dp"
        android:gravity="bottom"
        android:text="@string/go_back_next_hint"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
         />

</LinearLayout>
