<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_advancement_level_survey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karol.wbt.SurveyActivities.AdvancementLevelSurvey"
    android:orientation="vertical"
    android:background="@drawable/greybackground"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/advancement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/your_level"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/advancement_choice"
        android:layout_marginTop="125dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/opt_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/basic"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            tools:ignore="SmallSp" />

        <RadioButton
            android:id="@+id/opt_intermediate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/intermediate"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            tools:ignore="SmallSp" />

        <RadioButton
            android:id="@+id/opt_advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/advanced"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            tools:ignore="SmallSp" />

    </RadioGroup>

    <TextView
        android:id="@+id/moves_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:text="@string/go_back_next_hint"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"
        tools:ignore="InefficientWeight" />

</LinearLayout>
