<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/greybackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView56"
            android:layout_width="match_parent"
            android:layout_height="160dp" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"

            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            android:textStyle="bold|italic"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/thank_you" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_for_fill"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/end_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close" />

        <TextView
            android:id="@+id/move_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:text="@string/go_back_hint"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>